# Tracing-Techniques-Benchmarking

./: .gitignore  BENCHMARK.md  BENCHMARK_UPDATES.md  BUILD.md  CMakeLists.txt  EBPF_DESIGN.md  README.md  SAMPLE_APP.md  VALIDATION.md  build.sh  demo_ptrace_working.sh  test_long_running.c  test_ptrace_demo.c
.github/workflows/: benchmark-ci.yml
docs/: BENCHMARK.md  CI_PIPELINE.md  EBPF_DESIGN.md  LIBBPF_1.7_OPTIMIZATIONS_APPLIED.md  LTTNG_DESIGN.md  LTTNG_PTRACE_DESIGN.md  SAMPLE_APP.md  VALIDATION.md
ebpf_tracer/: mylib_tracer.bpf.c  run_ebpf_trace.sh
lttng_tracer/: mylib_tp.c  mylib_wrapper.c  run_lttng_trace.sh
report/: GENERATION_INFO.md  README.md  full_app_benchmark_results.html  index.html  results.json
sample_library/: mylib.c
scripts/: benchmark.py  combine_results.py  regenerate_report.py  validate_output.sh
src/sample/sample_app/: main.c
src/sample/sample_library/: mylib.c  mylib.h
src/tools/ebpf_tracer/: mylib_tracer.bpf.c  mylib_tracer.c  vmlinux.h
src/tools/lttng_ptrace_tracer/: lttng_ptrace_tracer.c  mylib_tp.c  mylib_tp.h  run_lttng_ptrace_trace.sh  test_ptrace.c
src/tools/lttng_tracer/: mylib_tp.h  mylib_wrapper.c
